--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"/>
     <title>Buy EHSM ticket</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
@@ -8,14 +9,26 @@
     <form action="pay" method="POST">
       <script src="https://button.paymill.com/v1/"
               id="button"
-              data-label="Pay with CreditCard"
+              data-label="Pay with ELV"
               data-title="Buy our product"
               data-description="It's a great product"
               data-submit-button="Pay 2.50 EUR"
               data-amount="250"
               data-currency="EUR"
               data-public-key="8585298099281237d892403846aedaf0"
-              data-elv="true" // Only for ELV payments
+              data-elv="true"
+              data-lang="de-DE">
+      </script>
+      <script src="https://button.paymill.com/v1/"
+              id="button"
+              data-label="Pay with Credit Card"
+              data-title="Buy our product"
+              data-description="It's a great product"
+              data-submit-button="Pay 2.50 EUR"
+              data-amount="250"
+              data-currency="EUR"
+              data-public-key="8585298099281237d892403846aedaf0"
+              data-elv="false"
               data-lang="de-DE">
       </script>
     </form>
