--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <form action="pay" method="POST">
+      <input type="hidden" name="amount" value="250"/>
+      <input type="hidden" name="product" value="ticketicket"/>
       <script src="https://button.paymill.com/v1/"
               id="button"
               data-label="Pay with ELV"
