--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="ehsm">
   <head>
     <meta charset="utf-8"/>
     <title>Buy EHSM ticket</title>
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-responsive.min.css"/>
     <link rel="stylesheet" href="/css/ehsm.css"/>
+    <script type="text/javascript" src="https://bridge.paymill.com/"></script>
   </head>
   <body ng-controller="TicketsController">
     <form action="pay" method="POST" class="form-horizontal">
@@ -17,32 +18,8 @@
         <label class="radio"><input type="radio" name="ticketType" value="supporter"> Supporter €272</label>
         <label class="radio"><input type="radio" name="ticketType" value="gold-supporter">Gold Supporter €1337</label>
       </div>
-      <input type="hidden" name="amount" value="250"/>
-      <input type="hidden" name="product" value="ticketicket"/>
-      <script src="https://button.paymill.com/v1/"
-              id="button"
-              data-label="Pay with ELV"
-              data-title="{{ticketTitle}}"
-              data-description="{{ticketTitle}}"
-              data-submit-button="Pay {{ticketPrice}} EUR"
-              data-amount="{{ticketPriceCents}}"
-              data-currency="{{currency}}"
-              data-public-key="{{paymillPublicKey}}"
-              data-elv="true"
-              data-lang="en-GB">
-      </script>
-      <script src="https://button.paymill.com/v1/"
-              id="button"
-              data-label="Pay with Credit Card"
-              data-title="{{ticketTitle}}"
-              data-description="{{ticketTitle}}"
-              data-submit-button="Pay {{ticketPrice}} EUR"
-              data-amount="{{ticketPriceCents}}"
-              data-currency="{{currency}}"
-              data-public-key="{{paymillPublicKey}}"
-              data-elv="false"
-              data-lang="en-GB">
-      </script>
+      <form-input-line name="number" label="Credit card #" placeholder="xxxx xxxx xxxx xxxx"></form-input-line>
+      <form-input-line name="expiry" label="Expiry" placeholder="MM/YY"></form-input-line>
     </form>
   </body>
   <script src="/js/angular.min.js"></script>
