--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,18 +13,42 @@
     <h1>Buy Ticket for EHSM 2014 {{he}}</h1>
     <form action="pay" method="POST" class="well form-horizontal" ng-submit="doit()" onsubmit="return false;">
       <fieldset>
-        <legend>Ticket Type</legend>
+        <label>Select your ticket:</label>
         <div class="controls control-group">
-          <label class="radio"><input type="radio" name="ticketType" value="student" bs-tooltip="tooltips.studentTicket">
+          <label class="radio">
+            <input type="radio" ng-model="ticket.type" value="student" bs-tooltip="tooltips.studentTicket" ng-click="updateTotal()">
             Student/unemployed €45</label>
-          <label class="radio"><input ng-disabled="!earlyTicketAvailable" type="radio" name="ticketType" value="regularEarly" bs-tooltip="tooltips.earlyTicket">
+          <label class="radio">
+            <input type="radio" ng-model="ticket.type" value="regularEarly" bs-tooltip="tooltips.earlyTicket"
+                   ng-disabled="!earlyTicketAvailable" ng-click="updateTotal()">
             Regular (early) €70</label>
-          <label class="radio"><input ng-disabled="earlyTicketAvailable" type="radio" name="ticketType" value="regularLate" bs-tooltip="tooltips.lateTicket">
+          <label class="radio">
+            <input type="radio" ng-model="ticket.type" value="regularLate" bs-tooltip="tooltips.lateTicket"
+                   ng-disabled="earlyTicketAvailable" ng-click="updateTotal()">
             Regular (late) €95</label>
-          <label class="radio"><input type="radio" name="ticketType" value="supporter" bs-tooltip="tooltips.supporterTicket" checked>
+          <label class="radio">
+            <input type="radio" ng-model="ticket.type" value="supporter" bs-tooltip="tooltips.supporterTicket"
+                   checked ng-click="updateTotal()">
             Supporter €272</label>
-          <label class="radio"><input type="radio" name="ticketType" value="gold-supporter" bs-tooltip="tooltips.goldSupporterTicket">
+          <label class="radio">
+            <input type="radio" ng-model="ticket.type" value="goldSupporter" bs-tooltip="tooltips.goldSupporterTicket" ng-click="updateTotal()">
             Gold Supporter €1337</label>
+        </div>
+        <label>We appreciate your additional donation to support EHSM:</label>
+        <div class="controls controls-row">
+          <div class="span3">
+            <div class="input-append">
+              <span class="add-on">€</span>
+              <input class="card-holdername span1" type="text" size="5" ng-model="ticket.donation" bs-tooltip="tooltips.donation"
+                     ng-change="updateTotal()"/>
+            </div>
+          </div>
+        </div>
+        <label>Total amount due:</label>
+        <div class="controls controls-row">
+          <div class="span3">
+            <label ng-cloak>€ {{totalAmount}}</label>
+          </div>
         </div>
       </fieldset>
       <fieldset>
