make total amount stand out

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -50,7 +50,7 @@
         <label>Total amount due:</label>
         <div class="controls controls-row">
           <div class="span3">
-            <label ng-cloak>€ {{totalAmount}}</label>
+            <span class="total-amount" ng-cloak>€ {{totalAmount}}</span>
           </div>
         </div>
       </fieldset>
