prepare invoice writing

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -87,7 +87,7 @@
             <label>Recipient</label>
             <textarea class="span3" rows="5"
                       name="invoiceInformation"
-                      ng-model="invoiceInfo" bs-tooltip="tooltips.invoiceInformation" data-placement="right"></textarea>
+                      ng-model="ticket.invoiceInfo" bs-tooltip="tooltips.invoiceInformation" data-placement="right"></textarea>
           </div>
         </div>
       </fieldset>        
