--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -98,8 +98,9 @@
             <div class="btn-group span4" ng-model="fop" bs-buttons-radio>
               <button type="button" class="btn" value="cc">Credit card</button>
               <button type="button" class="btn" value="elv">ELV</button>
+              <!--
               <button type="button" class="btn" value="bitpay">Bitcoin</button>
-              <button type="button" class="btn" value="wire">Wire</button>
+              <button type="button" class="btn" value="wire">Wire</button> -->
             </div>
           </div>
           <div id="payment-form">
