slight styling changes

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -49,9 +49,9 @@
             </div>
           </div>
           <label>Total amount due:</label>
-          <div class="controls controls-row">
+          <div class="controls controls-row total-amount">
             <div class="span3">
-              <span class="total-amount" ng-cloak>€ {{totalAmount}}</span>
+              <span class="amount" ng-cloak>€ {{totalAmount}}</span>
             </div>
           </div>
         </fieldset>
