remove bogus h1 component

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="https://bridge.paymill.com/"></script>
   </head>
   <body ng-controller="TicketsController">
-    <h1>Buy Ticket for EHSM 2014 {{he}}</h1>
+    <h1>Buy Ticket for EHSM 2014</h1>
     <div class="well" ng-view></div>
   </body>
   <script src="/js/angular.min.js"></script>
