Modifying the public page to look similiar to the main web page

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,7 +10,10 @@
     <script type="text/javascript" src="https://bridge.paymill.com/"></script>
   </head>
   <body ng-controller="TicketsController">
-    <h1>Buy Ticket for EHSM 2014</h1>
+    <center style="padding-top: 2em;">
+      <img src="/img/logo_web.png">
+    </center>
+    <h1>Buy a Ticket for EHSM 2014</h1>
     <div class="well" ng-view></div>
   </body>
   <script src="/js/angular.min.js"></script>
